--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <header>
-        <nav class='navbar navbar-inverse navbar-fixed-top justify-content-center '>
-            <div class='container'>
+        <nav class='navbar navbar-inverse navbar-fixed-top'>
+            <div class='container-fluid d-flex justify-content-between'>
                 <div class='navbar-header'>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
                         aria-expanded='false'>
@@ -91,19 +91,22 @@
     <footer id="footer">
         <div class="container">
             <div class='row'>
-                <div class=' footer-block column col-md-8'>
-                    <a href='#'>About</a>
-                    <a href='#'>Read</a>
-                    <a href='#'>Subscribe</a>
-                    <a href='#'>Contact Us</a>
+                <div class='column'>
+                    <div class=' footer-block column col-md-8'>
+                        <a href='#'>About</a>
+                        <a href='#'>Read</a>
+                        <a href='#'>Subscribe</a>
+                        <a href='#'>Contact Us</a>
+                    </div>
+                    <div class="column col-md-4 social-links">
+                        <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </div>
                 </div>
-                <!-- <div class="column col-md-4 social-links">
-                            <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                            <a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
-                            <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                            <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                </div> -->
+
             </div>
         </div>
     </footer>
