added text content

--- a/index.html
+++ b/index.html
@@ -44,61 +44,81 @@
         <div class='container-fluid no-padding'>
             <div class='row intro-container'>
                 <div class='col-md-12'>
-                    <h1>Text Here</h1>
-                    <p>Paragraph</p>
+                    <h2>Coming Fall 2019</h2>
+                    <h1>Earicle</h1>
+                    <h3>Think Out Loud</h3>
+                    <p>Give your thoughts a voice. Brain Decoding technology allows humans to feel present in the world
+                        that they're living in while feeling present with the people that they're with. By experiencing
+                        the inner thoughts of others, we can learn to feel how others feel and how to be more tolerant
+                        towards others. Ultimately, allowing us to become more human.
+
+                        Express yourself using Earicle, an immersive hearing technology that blurs the boundaries
+                        between speech and an individuals inner dialouge. </p>
                 </div>
 
-            </div>
+                <div class='row text-center tech-container'>
+                    <h1>A New Perspective</h1>
+                    <p>Earicle is an externally worn gadget that can be used to convert thoughts to text — either
+                        “perceived” or “produced” speech. It is a non-invasive, wearable earpiece that allows humans to
+                        converse in natural language with other people without any voice —without opening their mouth,
+                        and without externally observable movements — simply by articulating words internally.
 
-            <div class='row text-center tech-container'>
-                <h1>Text Here</h1>
-                <p>Paragraph</p>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Subscribe
-                </button>
-            </div>
-
-            <div class='row text-center use-container'>
-                <h1>Text Here</h1>
-                <p>Paragraph</p>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Subscribe
-                </button>
-            </div>
-
-            <div class='row'>
-                <div class='column col-md-6 compare-one-container'>
-                    <h3>Text Here</h3>
-                    <p>Paragraph</p>
+                        Earicle allows users to communicate with A.I. as effortlessly as one’s left brain talks to one’s
+                        right brain, so that humans can integrate the power of the Internet into their thinking at every
+                        level.</p>
+                    <h3>Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
+                    <button>ENTER THE LAB</button>
                 </div>
-                <div class='column col-md-6 compare-two-container'>
-                    <h3>Text Here</h3>
-                    <p>Paragraph</p>
 
+                <div class='row text-center use-container'>
+                    <h1>Easy as 1, 2, 3</h1>
+                    <p>To use, simply charge your device, wait for the small blue light on the outside to turn on, and
+                        place the device into your ears as you would with bluetooth headphones.</p>
+                    <button>SEE HOW</button>
+                </div>
+
+                <div class='row'>
+                    <div class='column col-md-6 compare-one-container'>
+                        <h1>Earicle</h1>
+                        <h2>Coming Fall 2019</h2>
+                        <h3>Hearing thoughts.</h3>
+                        <p>Look your conversation partner in the eye while wearing one Earicle to hear what they are
+                            really thinking.</p>
+                    </div>
+                    <div class='column col-md-6 compare-two-container'>
+                        <h1>Earicle-X</h1>
+                        <h2>Coming Winter 2020</h2>
+                        <h3>Hearing it all.</h3>
+                        <p>By wearing two Earicle's, you can predict your conversion partner's thoughts. Earicle-X
+                            extends your ‘hearing range’ 10 seconds into the future or past.</p>
+                    </div>
+                </div>
+
+                <div class='row text-center signoff-container'>
+                    <h1>The Future is Now</h1>
+                    <p>Subscribe below to receive information about our upcoming beta launch for Earicle and be one of
+                        the first to own this exclusive product. </p>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Subscribe
+                    </button>
+                    <h4>*Supplies extremely limited.</h4>
                 </div>
             </div>
-
-            <div class='row text-center signoff-container'>
-                <h1>Text Here</h1>
-                <p>Paragraph</p>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Subscribe
-                </button>
-            </div>
+        </div>>
 
     </main>
 
-    <footer id="footer">
+    <!-- <footer id="footer">
         <div class="container">
             <div class='row'>
-                <div class='column'>
-                    <div class=' footer-block column col-md-8'>
+                <div class='column col-md-12'>
+                    <div class=' footer-block column col-md-12'>
                         <a href='#'>About</a>
                         <a href='#'>Read</a>
                         <a href='#'>Subscribe</a>
                         <a href='#'>Contact Us</a>
                     </div>
-                    <div class="column col-md-4 social-links">
+                    <div class="column col-md-12 social-links">
                         <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
                         <a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
                         <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
@@ -106,10 +126,9 @@
                         <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
-
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
