--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class='navbar navbar-inverse navbar-fixed-top'>
-            <div class='container-fluid d-flex justify-content-between'>
+            <div class='container-fluid d-flex justify-content-center' id="nav_center">
                 <div class='navbar-header'>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
                         aria-expanded='false'>
@@ -25,22 +25,20 @@
                     <a class='navbar-brand' href='#'>Earicle</a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class='nav navbar-nav'>
+                    <ul class='nav navbar-nav navbar-right'>
                         <li class='nav-item'><a class='nav-link' href='#'>Home</a></li>
                         <li class='nav-item'><a class='nav-link' href='#'>About</a></li>
                         <li class='nav-item'><a class='nav-link' href='#'>Read</a></li>
                     </ul>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        Subscribe
-                    </button>
-
-
-                    </main>
+                            Subscribe
+                        </button>
                 </div>
             </div>
         </nav>
+        
     </header>
-    <main>
+    <main> 
         <div class='container-fluid no-padding'>
             <div class='row intro-container'>
                 <div class='col-md-12'>
@@ -151,11 +149,11 @@
                                 </div>
                                 <div class="mc-field-group">
                                     <label for="mce-FNAME">First Name </label>
-                                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                                    <input type="text" value="" name="FNAME" class="required First" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name">
                                 </div>
                                 <div class="mc-field-group">
                                     <label for="mce-LNAME">Last Name </label>
-                                    <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid Last Name">
                                 </div>
                                 <div class="mc-field-group input-group">
                                     <strong>How did you hear about us? <span class="asterisk">*</span>
