changed height of containers

--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
                         <li class='nav-item'><a class='nav-link' href='#'>Read</a></li>
                     </ul>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                            Subscribe
-                        </button>
+                        Subscribe
+                    </button>
                 </div>
             </div>
         </nav>
-        
+
     </header>
-    <main> 
+    <main>
         <div class='container-fluid no-padding'>
             <div class='row intro-container'>
                 <div class='col-md-12'>
+                    <br>
+                    <br>
                     <h2>Coming Fall 2019</h2>
                     <h1>Earicle</h1>
                     <h3>Think Out Loud</h3>
@@ -106,7 +108,7 @@
 
     </main>
 
-    <!-- <footer id="footer">
+    <footer id="footer">
         <div class="container">
             <div class='row'>
                 <div class='column col-md-12'>
@@ -126,7 +128,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
@@ -168,11 +170,15 @@
                                 </div>
                                 <div class="mc-field-group">
                                     <label for="mce-FNAME">First Name </label>
-                                    <input type="text" value="" name="FNAME" class="required First" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name">
+                                    <input type="text" value="" name="FNAME" class="required First" id="mce-FNAME"
+                                        pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15"
+                                        title="Please Put in a Valid First Name">
                                 </div>
                                 <div class="mc-field-group">
                                     <label for="mce-LNAME">Last Name </label>
-                                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid Last Name">
+                                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME"
+                                        pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15"
+                                        title="Please Put in a Valid Last Name">
                                 </div>
                                 <div class="mc-field-group input-group">
                                     <strong>How did you hear about us? <span class="asterisk">*</span>
