fixed styling for footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         right brain, so that humans can integrate the power of the Internet into their thinking at every
                         level.</p>
                     <h3>Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
-                    <button>ENTER THE LAB</button>
+                    <button>THE LAB</button>
                 </div>
 
                 <div class='row text-center use-container'>
@@ -111,12 +111,14 @@
     <footer id="footer">
         <div class="container">
             <div class='row'>
-                <div class='column col-md-12'>
+                <div class='footer-box column col-md-12'>
                     <div class=' footer-block column col-md-12'>
-                        <a href='#'>About</a>
+                        <a class="footer-links" href='#'>About</a>
                         <a href='#'>Read</a>
                         <a href='#'>Subscribe</a>
                         <a href='#'>Contact Us</a>
+                        <a href='#'>Legal</a>
+                        <a href='#'>Privacy Policy</a>
                     </div>
                     <div class="column col-md-12 social-links">
                         <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
