pulling new code

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
     <main> 
         <div class='container-fluid no-padding'>
-            <div class='row intro-container'>
-                <div class='col-md-12'>
+            <div class='row'>
+                <div class='col-md-12 intro-container'>
                     <h2>Coming Fall 2019</h2>
                     <h1>Earicle</h1>
                     <h3>Think Out Loud</h3>
@@ -54,52 +54,60 @@
                         between speech and an individuals inner dialouge. </p>
                 </div>
 
-                <div class='row text-center tech-container'>
-                    <h1>A New Perspective</h1>
-                    <p>Earicle is an externally worn gadget that can be used to convert thoughts to text — either
-                        “perceived” or “produced” speech. It is a non-invasive, wearable earpiece that allows humans to
-                        converse in natural language with other people without any voice —without opening their mouth,
-                        and without externally observable movements — simply by articulating words internally.
+                <div class='row'>
+                    <div class='col-md-12 text-center tech-container'>
+                        <h1>A New Perspective</h1>
+                        <p>Earicle is an externally worn gadget that can be used to convert thoughts to text — either
+                            “perceived” or “produced” speech. It is a non-invasive, wearable earpiece that allows humans to
+                            converse in natural language with other people without any voice —without opening their mouth,
+                            and without externally observable movements — simply by articulating words internally.
 
-                        Earicle allows users to communicate with A.I. as effortlessly as one’s left brain talks to one’s
-                        right brain, so that humans can integrate the power of the Internet into their thinking at every
-                        level.</p>
-                    <h3>Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
-                    <button>ENTER THE LAB</button>
-                </div>
-
-                <div class='row text-center use-container'>
-                    <h1>Easy as 1, 2, 3</h1>
-                    <p>To use, simply charge your device, wait for the small blue light on the outside to turn on, and
-                        place the device into your ears as you would with bluetooth headphones.</p>
-                    <button>SEE HOW</button>
+                            Earicle allows users to communicate with A.I. as effortlessly as one’s left brain talks to one’s
+                            right brain, so that humans can integrate the power of the Internet into their thinking at every
+                            level.</p>
+                        <h3>Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
+                        <button>ENTER THE LAB</button>
+                    </div>
                 </div>
 
                 <div class='row'>
-                    <div class='column col-md-6 compare-one-container'>
-                        <h1>Earicle</h1>
-                        <h2>Coming Fall 2019</h2>
-                        <h3>Hearing thoughts.</h3>
-                        <p>Look your conversation partner in the eye while wearing one Earicle to hear what they are
-                            really thinking.</p>
+                    <div class='col-md-12 text-center use-container'>
+                        <h1>Easy as 1, 2, 3</h1>
+                        <p>To use, simply charge your device, wait for the small blue light on the outside to turn on, and
+                            place the device into your ears as you would with bluetooth headphones.</p>
+                        <button>SEE HOW</button>
                     </div>
-                    <div class='column col-md-6 compare-two-container'>
-                        <h1>Earicle-X</h1>
-                        <h2>Coming Winter 2020</h2>
-                        <h3>Hearing it all.</h3>
-                        <p>By wearing two Earicle's, you can predict your conversion partner's thoughts. Earicle-X
-                            extends your ‘hearing range’ 10 seconds into the future or past.</p>
+                </div>
+
+                <div class='row'>
+                    <div class='column col-lg-12 compare'>
+                        <div class='col-md-6 compare-one-container'>
+                            <h1>Earicle</h1>
+                            <h2>Coming Fall 2019</h2>
+                            <h3>Hearing thoughts.</h3>
+                            <p>Look your conversation partner in the eye while wearing one Earicle to hear what they are
+                                really thinking.</p>
+                        </div>
+                        <div class='col-md-6 compare-two-container'>
+                            <h1>Earicle-X</h1>
+                            <h2>Coming Winter 2020</h2>
+                            <h3>Hearing it all.</h3>
+                            <p>By wearing two Earicle's, you can predict your conversion partner's thoughts. Earicle-X
+                                extends your ‘hearing range’ 10 seconds into the future or past.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class='row text-center signoff-container'>
-                    <h1>The Future is Now</h1>
-                    <p>Subscribe below to receive information about our upcoming beta launch for Earicle and be one of
-                        the first to own this exclusive product. </p>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        Subscribe
-                    </button>
-                    <h4>*Supplies extremely limited.</h4>
+                    <div class='column col-md-12'>
+                        <h1>The Future is Now</h1>
+                        <p>Subscribe below to receive information about our upcoming beta launch for Earicle and be one of
+                            the first to own this exclusive product. </p>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Subscribe
+                        </button>
+                        <h4>*Supplies extremely limited.</h4>
+                    </div>
                 </div>
             </div>
         </div>>
@@ -155,7 +163,7 @@
                         <form
                             action="https://gmail.us20.list-manage.com/subscribe/post?u=669ddc24a66a56e0ab80fbb21&amp;id=cb38737905"
                             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                            class="validate" target="_blank" novalidate>
+                            class="validate" target="_blank">
                             <div id="mc_embed_signup_scroll">
                                 <h2>Subscribe to our mailing list</h2>
                                 <div class="indicates-required"><span class="asterisk">*</span>
@@ -172,7 +180,7 @@
                                 </div>
                                 <div class="mc-field-group">
                                     <label for="mce-LNAME">Last Name </label>
-                                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid Last Name">
+                                    <input type="text" value="" name="LNAME" class="required Last" id="mce-LNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid Last Name">
                                 </div>
                                 <div class="mc-field-group input-group">
                                     <strong>How did you hear about us? <span class="asterisk">*</span>
