--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         <li class='nav-item'><a class='nav-link' href='#'>About</a></li>
                         <li class='nav-item'><a class='nav-link' href='#'>Read</a></li>
                     </ul>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" class="nav-suscribe btn btn-primary" data-toggle="modal"
+                        data-target="#exampleModal">
                         Subscribe
                     </button>
                 </div>
@@ -42,12 +43,11 @@
         <div class='container-fluid no-padding'>
             <div class='row intro-container'>
                 <div class='col-md-12'>
-                    <br>
-                    <br>
-                    <h2>Coming Fall 2019</h2>
-                    <h1>Earicle</h1>
-                    <h3>Think Out Loud</h3>
-                    <p>Give your thoughts a voice. Brain Decoding technology allows humans to feel present in the world
+                    <h2 class="intro-h2">Coming Fall 2019</h2>
+                    <h1 class="intro-h1">Earicle</h1>
+                    <h3 class="intro-h3">Think Out Loud</h3>
+                    <p class="intro-p">Give your thoughts a voice. Brain Decoding technology allows humans to feel
+                        present in the world
                         that they're living in while feeling present with the people that they're with. By experiencing
                         the inner thoughts of others, we can learn to feel how others feel and how to be more tolerant
                         towards others. Ultimately, allowing us to become more human.
@@ -57,8 +57,9 @@
                 </div>
 
                 <div class='row text-center tech-container'>
-                    <h1>A New Perspective</h1>
-                    <p>Earicle is an externally worn gadget that can be used to convert thoughts to text — either
+                    <h1 class="tech-h1" tech-h1>A New Perspective</h1>
+                    <p class="tech-p">Earicle is an externally worn gadget that can be used to convert thoughts to text
+                        — either
                         “perceived” or “produced” speech. It is a non-invasive, wearable earpiece that allows humans to
                         converse in natural language with other people without any voice —without opening their mouth,
                         and without externally observable movements — simply by articulating words internally.
@@ -66,30 +67,33 @@
                         Earicle allows users to communicate with A.I. as effortlessly as one’s left brain talks to one’s
                         right brain, so that humans can integrate the power of the Internet into their thinking at every
                         level.</p>
-                    <h3>Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
-                    <button>THE LAB</button>
+                    <h3 class="tech-h3">Learn more about the evolution of Brain Decoding and Neuroscience.</h3>
+                    <button class="tech-button">THE LAB</button>
                 </div>
 
                 <div class='row text-center use-container'>
-                    <h1>Easy as 1, 2, 3</h1>
-                    <p>To use, simply charge your device, wait for the small blue light on the outside to turn on, and
+                    <h1 class="use-h1">Easy as 1, 2, 3</h1>
+                    <p class="use-p">To use, simply charge your device, wait for the small blue light on the outside to
+                        turn on, and
                         place the device into your ears as you would with bluetooth headphones.</p>
-                    <button>SEE HOW</button>
+                    <button class="use-button">SEE HOW</button>
                 </div>
 
                 <div class='row'>
                     <div class='column col-md-6 compare-one-container'>
-                        <h1>Earicle</h1>
-                        <h2>Coming Fall 2019</h2>
-                        <h3>Hearing thoughts.</h3>
-                        <p>Look your conversation partner in the eye while wearing one Earicle to hear what they are
+                        <h1 class="compare-col1-h1">Earicle</h1>
+                        <h2 class="compare-col1-h2">Coming Fall 2019</h2>
+                        <h3 class="compare-col1-h3">Hearing thoughts.</h3>
+                        <p class="compare-col1-p">Look your conversation partner in the eye while wearing one Earicle to
+                            hear what they are
                             really thinking.</p>
                     </div>
                     <div class='column col-md-6 compare-two-container'>
-                        <h1>Earicle-X</h1>
-                        <h2>Coming Winter 2020</h2>
-                        <h3>Hearing it all.</h3>
-                        <p>By wearing two Earicle's, you can predict your conversion partner's thoughts. Earicle-X
+                        <h1 class="compare-col2-h1">Earicle-X</h1>
+                        <h2 class="compare-col2-h2">Coming Winter 2020</h2>
+                        <h3 class="compare-col2-h3">Hearing it all.</h3>
+                        <p class="compare-col2-p">By wearing two Earicle's, you can predict your conversion partner's
+                            thoughts. Earicle-X
                             extends your ‘hearing range’ 10 seconds into the future or past.</p>
                     </div>
                 </div>
